--- a/cards/templates/cards/catalog.html
+++ b/cards/templates/cards/catalog.html
@@ -6,10 +6,11 @@
 
 {% block content %}
     <h2>Каталог карточек</h2>
-     <ul>
+    <ul>
         {% for card in card_list %}
-            <li><a href="{% url 'card_detail' card.id_card %}">{{ card.question }}</a></li>
+            <li><a href="{% url 'card_detail' card.id %}">{{ card.question }}</a></li>
         {% endfor %}
     </ul>
 {% endblock %}
+
 
