--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <title>{% block title %}Моя веб-страница{% endblock %}</title>
 
     {% block style %}
+        {{ block.super }}
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/external.css' %}">
     {% endblock %}
