--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,18 @@
-<!-- root/templates/about.html -->
-
-{% extends 'base.html' %}
-
-{% block title %}О проекте - Моя Веб-Страница{% endblock %}
-
+<!--root/templates/about.html-->
+{% extends "base.html" %}
+{% comment %}
+Шаблон about - расширяет базовый шаблон base.html
+Рассказывает о проекте интервального повторения
+{% endcomment %}
 {% block content %}
-    <h2>О проекте</h2>
-    <p>Добро пожаловать на страницу "О проекте" !</p>
-    <p>Количество пользователей: {{ user_count }}</p>
-{% endblock %}
+<!--Шаблон about-->
+<h1>Проект интервального повторения</h1>
+<p>Проект интервального повторения - это проект,
+    который помогает запоминать информацию с помощью интервального повторения.</p>
 
+<p>Пользователей в проекте: {{users_count}}</p>
+<p>Карточек в проекте: {{cards_count}}</p>
+{% endblock %}
 
 
 
