--- a/templates/main.html
+++ b/templates/main.html
@@ -1,21 +1,24 @@
-<!-- root/templates/main.html -->
 {% extends 'base.html' %}
+{% comment %}
+root/templates/main.html
 
-{% load static %}
+Расширяет шаблон base.html
+1. Блок title
+2. Блок content
+- Использует переменную user_count для вывода количества пользователей
+3. Блок footer
+{% endcomment %}
 
-{% block title %}Главная страница - Моя Веб-Страница{% endblock %}
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/external.css' %}">
-{% endblock %}
+{% block title %}Главная страница{% endblock %}
 
 {% block content %}
-    <p>Основное содержимое страницы</p>
+    <h1>Главная страница сайта</h1>
+    <p>Добро пожаловать на главную страницу сайта!</p>
+    <p>На сайте зарегистрировано {{ users_count }} пользователей.</p>
 {% endblock %}
 
-
-
-
-
-
+{% block footer %}
+    <p class="copyright">Это футер из шаблона главной страницы</p>
+{% endblock %}
 
