--- a/templates/base.html
+++ b/templates/base.html
@@ -1,41 +1,88 @@
-<!-- root/templates/base.html -->
+<!DOCTYPE html>
 
+<!--1. Статика CSS и JS-->
+<!--2. Навигационное меню-->
+<!--3. Основной контент-->
+<!--4. Разделение на блоки header, main, footer-->
+<!--5. Блок title значение по умолчанию "Anki - приложение интервального повторения"-->
+<!--6. Блок для стилей было решено упразднить. Для этого идеально подходит блок head-->
+<!--7. Блок для дополнительных настроек в head-->
+<!--8. Блок для кастомного футера-->
+<!--9. Блок скриптов-->
+
+<!-- Загрузка статики -->
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Моя веб-страница{% endblock %}</title>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
+      {% block title %}Anki - приложение интервального повторения{% endblock %}
+    </title>
 
-    {% block style %}
-        {{ block.super }}
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/external.css' %}">
-    {% endblock %}
+    <!-- Подключим BS5 из CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-    {% block head %}{% endblock %}
-</head>
-<body>
+      <!-- Highlight.js Stylesheet -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/tomorrow-night-bright.min.css">
+
+    <!-- Подключим из статики app cards/static/css/main.css -->
+    <link rel="stylesheet" href="{% static 'cards/css/main.css' %}" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" rel="stylesheet">
+
+
+    <!-- Блок для дополнительных настроек в head -->
+    {% block head %} {% endblock %}
+  </head>
+  <body class="d-flex flex-column min-vh-100">
     <header>
-        {% include 'include/nav_menu.html' %}
-    </header>
+  <div class="container">
+    {% include "include/nav_menu.html" %}
+  </div>
+</header>
 
-    <div class="content">
-        {% block content %}{% endblock %}
-    </div>
+    <!-- Блок контента -->
+   <main class="flex-shrink-0">
+  <div class="container mt-3">
+    {% block content %} {% endblock %}
+  </div>
+</main>
 
-    {% block scripts %}
-        <script src="{% static 'js/jquery.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- Блок подвала -->
+    <footer class="footer mt-auto py-3 bg-light">
+  <div class="container">
+    {% block footer %}
+      <p class="text-muted">Приложение интервального повторения "Anki", в рамках учебного проекта Академии TOP © 2024</p>
     {% endblock %}
+  </div>
+</footer>
 
-    <footer>
-        {% block footer %}{% endblock %}
-    </footer>
-</body>
+
+    <!-- СКРИПТЫ! -->
+
+    <!-- Подключим BS5 из CDN -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Highlight.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
+
+    <script src="{% static 'cards/js/main.js' %}"></script>
+      
+    <script>
+      {% block scripts %}
+      {% endblock %}
+    </script>
+  </body>
 </html>
-
-
-
