--- a/templates/include/nav_menu.html
+++ b/templates/include/nav_menu.html
@@ -1,8 +1,24 @@
-<!-- root/templates/include/nav_menu.html -->
+<!--Меню было вставлено через include в базовый шаблон-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <!-- Логотип и кнопка для мобильных версий -->
 
-<ul>
-    <li><a href="{% url 'index' %}">Главная</a></li>
-    <li><a href="{% url 'about' %}">О проекте</a></li>
-    <li><a href="{% url 'catalog' %}">Каталог карточек</a></li>
-    <!-- Добавьте ссылки на другие разделы сайта -->
-</ul>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Ссылки навигации -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        {% for item in menu %}
+          <li class="nav-item">
+            <a class="nav-link {% if forloop.first %}active{% endif %}" aria-current="page" href="{% url item.url_name %}">{{ item.title }}</a>
+          </li>
+          {% if not forloop.last %}
+            <!-- В BS5 разделители в меню не являются общепринятыми, но если нужно, используйте дополнительный CSS или JS для стилизации -->
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+</nav>
