--- a/cards/templates/cards/catalog.html
+++ b/cards/templates/cards/catalog.html
@@ -1,6 +1,8 @@
 <!-- cards/templates/cards/catalog.html -->
 <!-- Использует шаблон cards/templates/cards/include/card_preview.html -->
 {% extends "base.html" %}
+{% load cache %}
+
 {% block head %}
 <style>
 /* Стили для темной темы пагинации */
@@ -38,7 +40,7 @@
     {% endif %}
 {% for num in page_obj.paginator.page_range %}
   <li class="page-item {% if page_obj.number == num %}active{% endif %}">
-    <a class="page-link text-white bg-secondary" href="?page={{ num }}&sort={{ sort }}&order={{ order }}">{{ num }}</a>
+    <a class="page-link text-white bg-secondary" href="?page={{ num }}&sort={{ sort }}&order={{ order }}&search_query={{ search_query }}">{{ num }}</a>
   </li>
 {% endfor %}
 
@@ -83,28 +85,28 @@
     order: порядок сортировки ('asc' для возрастания, 'desc' для убывания; по умолчанию 'desc'). -->
 
     <div class="mb-1 d-flex justify-content-start">
-  <div><strong>Порядок сортировки:</strong></div>
-  <div class="form-check ms-2">
-    <input class="form-check-input" type="radio" name="order" id="sortOrderDesc" value="desc" checked>
-    <label class="form-check-label" for="sortUploadDate">
-      Убыванию
-    </label>
-  </div>
-  <div class="form-check ms-2">
-    <input class="form-check-input" type="radio" name="order" id="sortOrderAsc" value="asc">
-    <label class="form-check-label" for="sortViews">
-      Возрастанию
-    </label>
-  </div>
-</div>
-
+      <div><strong>Порядок сортировки:</strong></div>
+      <div class="form-check ms-2">
+        <input class="form-check-input" type="radio" name="order" id="sortOrderDesc" value="desc" checked>
+        <label class="form-check-label" for="sortUploadDate">
+          Убыванию
+        </label>
+      </div>
+      <div class="form-check ms-2">
+        <input class="form-check-input" type="radio" name="order" id="sortOrderAsc" value="asc">
+        <label class="form-check-label" for="sortViews">
+          Возрастанию
+        </label>
+      </div>
+     </div>
 </form>
 </div>
 
 
-
+{% comment %} {% cache 90 catalog_content %} {% endcomment %}
 {% for card in cards %}
     {% include "cards/include/card_preview.html" %}
 {% endfor %}
+{% comment %} {% endcache %} {% endcomment %}
 {% endblock %}
 
