--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,9 +4,14 @@
   <div class="row justify-content-center">
     <div class="col-5">
       <h2>Вход в систему</h2>
-      <form method="post" action="{% url 'users:login' %}">
-        {% csrf_token %} {{ form.as_p }}
+      <form method="post">
+        {% csrf_token %} 
+        {{ form.as_p }}
+        {% comment %} Передача в url следующей страницы {% endcomment %}
+        <input type="hidden" name="next" value="{{ request.GET.next }}">
         <button type="submit" class="btn btn-dark">Войти</button>
+        {% comment %} Ссылка забыл пароль {% endcomment %}
+        <a href="{% url 'users:password_reset' %}" class="secondary-link">Забыли пароль?</a>
       </form>
     </div>
   </div>
